feat: add article

--- a/content/posts/2000-05-26-168-nagradi.md
+++ b/content/posts/2000-05-26-168-nagradi.md
@@ -8,6 +8,6 @@ tags: ['награди', 'журналистика']
 
 {{< figure src="../../images/2000-05-26-168-nagradi/cover.webp" attr="Миролюба Бенатова" align=center >}}
 
-Поощрителна награда за журналистическо разследвани получи репортерката от „168 часа“ Миролюба Бенатова. Материалът „Университетската болест - рушвет“ е впечатлил председателя на Фондация „Свободна и демократична България“ Димитър Паница и журито на ежегодните награди, които фондацията присъжда. Емил Спахийски от в. „Сега“ отнесе 2000 долара и плакет на Георги Чапкънов за репортажите си от войната в Косово. В раздел „Журналистическо разследване“ наградата отиде при Христо Христов от в. „Демокрация“. Призът за коментари и анализи получи Ивайло Дичев за публикации във в. „24 часа“.
+Поощрителна награда за журналистическо разследване получи репортерката от „168 часа“ Миролюба Бенатова. Материалът [„Университетската болест - рушвет“](1999-07-16-universitetskata-bolest-rushvet) е впечатлил председателя на Фондация „Свободна и демократична България“ Димитър Паница и журито на ежегодните награди, които фондацията присъжда. Емил Спахийски от в. „Сега“ отнесе 2000 долара и плакет на Георги Чапкънов за репортажите си от войната в Косово. В раздел „Журналистическо разследване“ наградата отиде при Христо Христов от в. „Демокрация“. Призът за коментари и анализи получи Ивайло Дичев за публикации във в. „24 часа“.
 
 Журито, в което участват главни редактори, представители на медии и интелектуалци, е пресяло най-добрите 168 публикации на над 70 автори.
