feat: add article

--- a/content/posts/2000-02-25-168-nagradi.md
+++ b/content/posts/2000-02-25-168-nagradi.md
@@ -10,4 +10,4 @@ tags: ['награди', 'журналистика']
 
 24-годишната репортерка от в. „168 часа“ Миролюба Бенатова е сред първите български журналисти, получили Годишните награди на фондацията „Гражданско обединение срещу наркотиците“.
 
-Наградата се получава за медиен принос в отразяването на проблема „Наркомании“ - 1999. Призът на Миролюба Бенатова е в номинацията „За аналитично проблемно отразяване“ на тематиката. Журито ѝ присъди наградата за публикациите за синтетичните дроги, Клиниката в Суходол и специалното разследване за изчезналия метадон за 500 000 марки от Националния център по наркомании. Сред отличените е и колежката от в. „24 часа“ Жени Милчева - за пробив в отразяването на проблема.
+Наградата се получава за медиен принос в отразяването на проблема „Наркомании“ - 1999. Призът на Миролюба Бенатова е в номинацията „За аналитично проблемно отразяване“ на тематиката. Журито ѝ присъди наградата за публикациите за синтетичните дроги, [Клиниката в Суходол](1999-07-30-dramata-da-rabotish-i-da-se-lekuvash-v-suhodol) и специалното разследване за изчезналия метадон за 500 000 марки от Националния център по наркомании. Сред отличените е и колежката от в. „24 часа“ Жени Милчева - за пробив в отразяването на проблема.
